# gustavgrad

./: .flake8  .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: constraints.txt  coverage.yml  python-package.yml  release.yml  static-analysis.yml  test.yml
.pytest_cache/v/cache/: nodeids
autograd/: __init__.py  functions.py  loss.py  module.py  optim.py  tensor.py
examples/: fizzbuzz.py  linear_regression.py  xor.py  xor_bce.py
gustavgrad/: module.py
src/gustavgrad/: function.py  functions.py  loss.py  tensor.py
tests/: test_activations.py  test_loss.py  test_module.py  test_tensor.py  test_tensor_add.py  test_tensor_matmul.py  test_tensor_mul.py  test_tensor_repr.py  test_tensor_slice.py  test_tensor_sub.py  test_tensor_sum.py
tests/function/: test_activations.py
tests/loss/: test_loss.py
tests/module/: test_module.py
tests/optim/: test_optim.py
tests/tensor/: test_tensor.py
tests/tensor/operation/: test_add.py  test_matmul.py  test_mul.py  test_slice.py  test_sub.py  test_sum.py
