[tool.poetry]
name = "autograd"
version = "0.1.0"
description = ""
authors = ["Gustav Gränsbo <gustav.gransbo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.782"
tqdm = "^4.47.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
