[tool.poetry]
name = "gustavgrad"
version = "0.1.0"
description = ""
authors = ["Gustav Gränsbo <gustav.gransbo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.3"
black = "^19.10b0"
mypy = "^0.782"
tqdm = "^4.47.0"
isort = {extras = ["pyproject"], version = "^4.3.21"}

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
